@@ -16,7 +16,7 @@ from creme.creme_core.bricks import (
     MyJobsBrick,
 )
 # Should be a test queue
-from creme.creme_core.core.job import get_queue
+from creme.creme_core.core.job import get_queue, job_type_registry
 from creme.creme_core.creme_jobs import (
     batch_process_type,
     reminder_type,
@@ -29,6 +29,16 @@ from creme.creme_core.utils.dates import dt_to_ISO8601
 from ..base import CremeTestCase
 # from .base import ViewsTestCase
 from .base import BrickTestCaseMixin
+
+
+class _NotConfigurableType(JobType):
+    id = JobType.generate_id('creme_core', 'not_configurable')
+    verbose_name = 'Not configurable test job'
+    periodic = JobType.PERIODIC
+    configurable = False
+
+
+not_configurable_type = _NotConfigurableType()
 
 
 # class JobViewsTestCase(ViewsTestCase, BrickTestCaseMixin):
@@ -46,8 +56,13 @@ class JobViewsTestCase(BrickTestCaseMixin, CremeTestCase):
 
         cls.ct_orga_id = ContentType.objects.get_for_model(FakeOrganisation).id
 
+        job_type_registry.register(not_configurable_type)
+
     def tearDown(self):
         self.queue.ping = self._original_queue_ping
+
+        # TODO
+        # job_type_registry.unregister(not_configurable_type)
 
     @staticmethod
     def _build_enable_url(job):
@@ -215,8 +230,7 @@ class JobViewsTestCase(BrickTestCaseMixin, CremeTestCase):
             info_buttons2, reverse('creme_core__disable_job', args=(job.id,)),
         )
 
-    def test_editview01(self):
-        "Not periodic."
+    def test_editview__not_periodic(self):
         user = self.login_as_root_and_get()
 
         job = self._create_batchprocess_job(user=user)
@@ -228,8 +242,7 @@ class JobViewsTestCase(BrickTestCaseMixin, CremeTestCase):
         self.assertGET409(job.get_edit_absolute_url())
 
     @override_settings(PSEUDO_PERIOD=2)
-    def test_editview02(self):
-        "Pseudo periodic."
+    def test_editview__pseudo_periodic(self):
         self.login_as_root()
 
         job = self.get_object_or_fail(Job, type_id=reminder_type.id)
@@ -246,7 +259,7 @@ class JobViewsTestCase(BrickTestCaseMixin, CremeTestCase):
 
         self.assertGET409(job.get_edit_absolute_url())
 
-    def test_editview03(self):
+    def test_editview__periodic(self):
         "Periodic: edit periodicity + specific data."
         queue = self.queue
         queue.clear()
@@ -315,7 +328,7 @@ class JobViewsTestCase(BrickTestCaseMixin, CremeTestCase):
             queue.refreshed_jobs
         )
 
-    def test_editview04(self):
+    def test_editview__peridoc__reference_run(self):
         "Periodic: edit reference_run."
         queue = self.queue
         queue.clear()
@@ -353,7 +366,7 @@ class JobViewsTestCase(BrickTestCaseMixin, CremeTestCase):
 
         self.assertTrue(queue.refreshed_jobs)
 
-    def test_editview05(self):
+    def test_editview__periodic__no_change(self):
         "No change of periodicity/reference_run."
         queue = self.queue
         queue.clear()
@@ -386,12 +399,18 @@ class JobViewsTestCase(BrickTestCaseMixin, CremeTestCase):
 
         self.assertListEqual([], queue.refreshed_jobs)
 
-    def test_editview06(self):
+    def test_editview__periodic_perms(self):
         "Periodic: credentials errors."
         self.login_as_standard()
 
         job = self.get_object_or_fail(Job, type_id=temp_files_cleaner_type.id)
         self.assertGET403(job.get_edit_absolute_url())
+
+    def test_editview__not_configurable(self):
+        self.login_as_root()
+
+        job = Job.objects.create(type_id=not_configurable_type.id)
+        self.assertGET409(job.get_edit_absolute_url())
 
     def test_jobs_all01(self):
         user = self.login_as_root_and_get()
@@ -626,7 +645,9 @@ class JobViewsTestCase(BrickTestCaseMixin, CremeTestCase):
         )
         self.assertPOST409(self._build_delete_url(job), follow=True)
 
-    def test_disable01(self):
+    def test_disable(self):
+        self.assertIs(batch_process_type.configurable, True)
+
         queue = self.queue
         queue.clear()
 
@@ -670,19 +691,33 @@ class JobViewsTestCase(BrickTestCaseMixin, CremeTestCase):
             queue.refreshed_jobs,
         )
 
-    def test_disable02(self):
+    def test_disable__user_job(self):
         "Cannot disable a non-system job."
         user = self.login_as_root_and_get()
 
         job = self._create_batchprocess_job(user=user)
         self.assertPOST409(self._build_disable_url(job))
 
-    def test_disable03(self):
-        "Only super-users can edit a system job"
+    def test_disable__perms(self):
+        "Only super-users can edit a system job."
         self.login_as_standard()
 
         job = Job.objects.create(type_id=batch_process_type.id)
         self.assertPOST403(self._build_disable_url(job))
+
+    def test_disable__not_configurable(self):
+        self.assertIs(batch_process_type.configurable, True)
+
+        queue = self.queue
+        queue.clear()
+
+        self.login_as_root()
+        self.assertListEqual([], queue.refreshed_jobs)
+
+        job = Job.objects.create(type_id=not_configurable_type.id)
+        self.assertIs(job.enabled, True)
+        self.assertPOST409(self._build_disable_url(job))
+        self.assertPOST409(self._build_enable_url(job))
 
     def test_status01(self):
         user = self.login_as_standard()
